# piksel-core

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  datacube.conf  datacube.conf.template  products.csv
.github/: CODEOWNERS
.github/workflows/: build-image.yml  build-push.yml  docker-build.yml  manual-build.yml  tag-build.yml  test-odc.yml  test.yml
binder/: apt.txt  conda-lock.yml  environment.yml  packages.txt  requirements.txt  start
docker/: Dockerfile  docker-compose-test.yml  docker-compose.test.yml  docker-compose.yml
docker/jupyter/: Dockerfile  Dockerfile.new  README.md  conda-lock.yml  entrypoint.sh  environment.yml  jupyter_lab_config.py  postBuild  (+7 more)
docker/jupyter-dev/: Dockerfile  bashrc  entrypoint.sh  jupyter_lab_config.py  jupyter_server_config.py  overrides.json  requirements.txt  starship.toml
docker/odc/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt
metadata/: custom_metadata.odc-type.yaml
notebooks/: Compare_Landsat_STAC_ODC.ipynb  Compare_S-2_STAC_ODC.ipynb  Compare_STAC_ODC.ipynb  Landsat_GettingStarted.ipynb  S2_l2a_Loading and Plotting.ipynb  Sentinel-2_GettingStarted.ipynb  test_sentinel2l2a.ipynb  utils.py
products/: geomad_s2_annual.odc-product.yaml  gm_s2.odc-product.yaml  lsX_c2l2_st.odc-product.yaml  s1-rtc.odc-product.yaml  s1_rtc.odc-product.yaml  s2_geomad_annual.odc-product.yaml  s2_l2a.odc-product.yaml  s2_l2a_c0.odc-product.yaml
scripts/: conda-search.sh  delete_odc_product.sql  generate_config.sh  odc_common_queries.pgsql
test/: conftest.py
tests/: README.md  conftest.py
(+45 files in other folders)
